docs: :memo: all swag
